--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:iuC4MtvQQgVRBA9gxzrX@containers-us-west-34.railway.app:7320/railway"
+DATABASE_URL="postgresql://postgres:r15ZpYKgHk8vxFAIPLvD@containers-us-west-199.railway.app:6412/railway"
