--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:XH3dxKg13tbebUZkcn0K@containers-us-west-119.railway.app:5662/railway"
+DATABASE_URL="postgresql://postgres:xQoKGV73LQzawrmHCGyI@containers-us-west-85.railway.app:6981/railway"
